--- a/index.html
+++ b/index.html
@@ -469,11 +469,11 @@ header {
 /* ------------------ アクセス ------------------ */
 .access-section {
   max-width: 700px;
-  margin: 50px auto;
+  margin: 30px auto 50px;
   padding: 25px;
   background: rgba(255,255,255,0.75);
   border-radius: 20px;
-  font-family: 'M PLUS Rounded 1c', sans-serif;
+  text-align: left;
   color: #9F987D;
 }
 
@@ -668,9 +668,13 @@ footer {
     </div>
 
 
-<section class="access-section" id="access">
-  <h2 class="access-title">アクセス</h2>
-  <p class="access-text">〒950-0861<br>新潟県新潟市東区中山6-19-5　ウェル新潟ビル206</p>
+<h2 class="pc-title" id="access">アクセス</h2>
+
+<section class="access-section">
+  <p class="access-text">
+    〒950-0861<br>
+    新潟県新潟市東区中山6-19-5　ウェル新潟ビル206
+  </p>
 
   <div class="map-wrapper">
     <iframe
