--- a/index.html
+++ b/index.html
@@ -596,6 +596,9 @@ footer {
   <a href="#flow">ご利用の流れ</a>
   <a href="#access">アクセス</a>
   <a href="#" id="contact-link">お問い合わせ</a>
+  <a href="https://www.instagram.com/noir_niigata/" target="_blank" class="insta-link">
+    Instagram
+  </a>
     </nav>
 
   </div>
