--- a/index.html
+++ b/index.html
@@ -500,6 +500,14 @@ header {
   border-radius: 4px;
 }
 
+  @media (max-width: 480px) {
+  .access-title {
+    display: block;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+}
+
 /* 住所 */
 .access-text {
   position: relative;
@@ -670,8 +678,7 @@ footer {
       </div>
     </div>
 
-
-<h2 class="pc-title" id="access">アクセス</h2>
+<h2 class="pc-title access-title">アクセス</h2>
 
 <section class="access-section">
   <p class="access-text">
