--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@ footer {
 
 <section id="contact-section" class="contact-form">
   <h2>お問い合わせ</h2>
-  <iframe src="https://docs.google.com/forms/..." width="100%" height="700"></iframe>
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSci9ClyPaBeHyqKnsIpgh6nGqeLRpV-x8E1sJ7C8qhSyth11Q/viewform?embedded=true" width="100%" height="700"></iframe>
 </section>
 
 <footer>
