--- a/index.html
+++ b/index.html
@@ -695,9 +695,11 @@ footer {
   </div>
 </section>
 
+<h2 class="pc-title contact-title" id="contact">お問い合わせ</h2>
+
 <section id="contact-section" class="contact-form">
-  <h2>お問い合わせ</h2>
-  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSci9ClyPaBeHyqKnsIpgh6nGqeLRpV-x8E1sJ7C8qhSyth11Q/viewform?embedded=true" width="100%" height="700"></iframe>
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSci9ClyPaBeHyqKnsIpgh6nGqeLRpV-x8E1sJ7C8qhSyth11Q/viewform?embedded=true" width="100%" height="700">
+  </iframe>
 </section>
 
 <footer>
