--- a/index.html
+++ b/index.html
@@ -556,6 +556,13 @@ header {
 
 .contact-form.show { display: block; }
 
+  @media (max-width: 480px) {
+  .contact-title {
+    display: block;
+    text-align: center;
+  }
+}
+
 /* ------------------ フッター ------------------ */
 footer {
   background: rgba(255,255,255,0.5);
