--- a/index.html
+++ b/index.html
@@ -443,6 +443,11 @@ header {
     transform: scaleX(1.5);
   }
 
+  .arrow流れ,
+.arrow料金 {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+}
+
   /* 中身はトグル */
  .content流れ,
 .content料金 {
