--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@ header {
 
   .arrow流れ,
 .arrow料金 {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+  font-family: 'Arial', sans-serif;
 }
 
   /* 中身はトグル */
