--- a/index.html
+++ b/index.html
@@ -415,8 +415,9 @@ header {
   .toggle-container流れ,
   .toggle-container料金 {
     text-align: center;
+    margin: 40px 0;
   }
-
+    
   /* ボタン：元デザインを活かす */
   .toggle-button流れ,
   .toggle-button料金 {
