--- a/index.html
+++ b/index.html
@@ -367,11 +367,12 @@ header {
   width: 100%;
   text-align: center;
   font-size: 1.8em;
-  margin: 20px 0 15px;
   font-family: 'M PLUS Rounded 1c', sans-serif;
   color: #9F987D;
   position: relative;
   display: inline-block;
+  margin-top: 70px;
+  margin-bottom: 15px;
 }
 
   .pc-title::before {
