--- a/index.html
+++ b/index.html
@@ -676,8 +676,8 @@ footer {
   <p>生活面での不安や集団活動での悩み、<br>コミュニケーションや感覚面のサポートも行っています。</p>
 </section>
  
- <div class="toggle-container流れ">
-     <h2 class="pc-title" id="flow">ご利用開始までの流れ</h2>
+ <div class="toggle-container流れ" id="flow">
+  <h2 class="pc-title">ご利用開始までの流れ</h2>
       <button class="toggle-button流れ" onclick="toggleContent流れ()">
   ご利用開始までの流れ
   <span class="arrow流れ">∨</span>
@@ -687,8 +687,8 @@ footer {
       </div>
     </div>
     
-    <div class="toggle-container料金">
-<h2 class="pc-title" id="price">ご利用料金について</h2>
+   <div class="toggle-container料金" id="price">
+  <h2 class="pc-title">ご利用料金について</h2>
      <button class="toggle-button料金" onclick="toggleContent料金()">
   ご利用料金
   <span class="arrow料金">∨</span>
@@ -700,7 +700,7 @@ footer {
 
 <h2 class="pc-title access-title">アクセス</h2>
 
-<section class="access-section">
+<section class="access-section" id="access">
   <p class="access-text">
     〒950-0861<br>
     新潟県新潟市東区中山6-19-5　ウェル新潟ビル206
@@ -714,7 +714,7 @@ footer {
   </div>
 </section>
 
-<h2 class="pc-title contact-title" id="contact">お問い合わせ</h2>
+<h2 class="pc-title contact-title" id="contact">
 
 <section id="contact-section" class="contact-form">
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSci9ClyPaBeHyqKnsIpgh6nGqeLRpV-x8E1sJ7C8qhSyth11Q/viewform?embedded=true" width="100%" height="700">
