--- a/index.html
+++ b/index.html
@@ -559,11 +559,16 @@ header {
 /* ------------------ お問い合わせ ------------------ */
 .contact-form {
   display: none;
-  max-width: 600px;
-  margin: 40px auto;
-  padding: 20px;
+  max-width: 1100px;
+  margin: 0 auto 80px;
+  padding: 0 20px;
   background: rgba(255,255,255,0.85);
   border-radius: 15px;
+}
+  /* iframeは常に親にフィット */
+.contact-form iframe {
+  width: 100%;
+  border: none;
 }
 
 .contact-form.show { display: block; }
@@ -716,7 +721,7 @@ footer {
   </div>
 </section>
 
-<h2 class="pc-title contact-title" id="contact">
+<h2 class="pc-title contact-title" id="contact">お問い合わせ</h2>
 
 <section id="contact-section" class="contact-form">
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSci9ClyPaBeHyqKnsIpgh6nGqeLRpV-x8E1sJ7C8qhSyth11Q/viewform?embedded=true" width="100%" height="700">
