--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@ header {
   width: 100%;
   text-align: center;
   font-size: 1.8em;
-  margin: 0 0 25px;
+  margin: 80px 0 25px;
   position: relative;
   display: inline-block;
 }
@@ -627,8 +627,8 @@ footer {
 
     <!-- メニューは1つだけ！ -->
     <nav class="menu" id="menu">
-  <a href="#price">ご利用料金</a>
   <a href="#flow">ご利用の流れ</a>
+  <a href="#price">ご利用料金</a>
   <a href="#access">アクセス</a>
   <a href="#" id="contact-link">お問い合わせ</a>
   <a href="https://www.instagram.com/noir_niigata/" target="_blank" class="insta-link">
