--- a/index.html
+++ b/index.html
@@ -527,6 +527,7 @@ header {
   line-height: 1.2;        /* ← 行間を詰める */
   display: inline-block;
   margin-bottom: 2px;     /* ← 住所との間を詰める */
+　position: relative;
 }
 
 /* 住所 */
