--- a/index.html
+++ b/index.html
@@ -653,9 +653,10 @@ footer {
   <button class="slide-arrow left">‹</button>
 
   <div class="slider">
-    <img src="景色1.jpg" alt="">
-    <img src="景色2.jpg" alt="">
-    <img src="景色3.jpg" alt="">
+    <img src="支援の説明.png" alt="">
+    <img src="ノワールの得意なこと.png" alt="">
+    <img src="多様な専門職が在籍.png" alt="">
+    <img src="生活面での不安や.png" alt="">
   </div>
 
   <button class="slide-arrow right">›</button>
