--- a/index.html
+++ b/index.html
@@ -215,47 +215,7 @@ header {
 }
 
       /* スライダー本体 */
-.slider {
-  display: flex;
-  overflow-x: auto;
-  scroll-snap-type: x mandatory;
-  -webkit-overflow-scrolling: touch;
-
-  width: 100%;
-  max-width: 420px;     /* ← 画像と同じ幅 */
-  margin: 0 auto;       /* ← 完全中央 */
-  
-  scrollbar-width: none;
-}
-.slider::-webkit-scrollbar {
-  display: none;
-}
-
 /* 1枚ずつ表示（PC） */
-.slider img {
-  flex-shrink: 0;
-  width: 100%;
-  max-width: 420px;
-  height: auto;
-  margin: 0 auto;
-  scroll-snap-align: center;
-  border-radius: 0;
-  box-shadow: none;
-   object-fit: contain;   /* ← これ追加 */
-}
-/* スマホ */
-@media (max-width: 480px) {
-  .slider {
-    max-width: 300px;   /* ← 枠を小さく */
-  }
-
-  .slider img {
-    width: 100%;        /* ← 1枚＝100% */
-    margin: 0;
-  }
-} 
-
-  /* 1枚分のスライド */
 .slide {
   flex-shrink: 0;
   width: 100%;
@@ -268,12 +228,31 @@ header {
 
   border-radius: 12px;
 }
+.slide::-webkit-scrollbar {
+  display: none;
+}
+.slide img {
+  width: 90%;
+  height: auto;
+  object-fit: contain;
+}
+
+/* スマホ */
+@media (max-width: 480px) {
+  .slider {
+    max-width: 300px;
+  }
+
+  .slide {
+    max-width: 300px;
+  }
+} 
 
 /* 背景（画像ごと） */
-.bg1 { background: none; }   
-.bg2 { background: none; }   
-.bg3 { background: #ffffff; } 
-.bg4 { background: #ffffff; } 
+.bg1 { background: #f7f5f0; }
+.bg2 { background: #eef4f7; }
+.bg3 { background: #f9f0f3; }
+.bg4 { background: #f2f6ef; }
 
 /* 中の画像 */
 .slide img {
