--- a/index.html
+++ b/index.html
@@ -216,8 +216,24 @@ header {
 
       /* スライダー本体 */
 /* 1枚ずつ表示（PC） */
+.slider {
+  display: flex;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  -webkit-overflow-scrolling: touch;
+
+  width: 100%;
+  max-width: 420px;
+  margin: 0 auto;
+
+  scrollbar-width: none;
+}
+.slider::-webkit-scrollbar {
+  display: none;
+}
+
 .slide {
-  flex-shrink: 0;
+  flex: 0 0 100%;
   width: 100%;
   max-width: 420px;
   aspect-ratio: 4 / 3;
@@ -226,11 +242,11 @@ header {
   align-items: center;
   justify-content: center;
 
+  scroll-snap-align: center;
   border-radius: 12px;
 }
-.slide::-webkit-scrollbar {
-  display: none;
-}
+
+/* 画像 */
 .slide img {
   width: 90%;
   height: auto;
@@ -242,24 +258,17 @@ header {
   .slider {
     max-width: 300px;
   }
-
   .slide {
     max-width: 300px;
   }
-} 
+}
 
-/* 背景（画像ごと） */
+/* 背景 */
 .bg1 { background: #f7f5f0; }
 .bg2 { background: #eef4f7; }
 .bg3 { background: #f9f0f3; }
 .bg4 { background: #f2f6ef; }
-
-/* 中の画像 */
-.slide img {
-  width: 90%;
-  height: auto;
-  object-fit: contain;
-}
+  
 /* ---------- ボックス ---------- */
 .box-container {
   display: grid;
