--- a/index.html
+++ b/index.html
@@ -155,6 +155,18 @@ header {
   .overlay-image { max-width: 400px; }
 }
 
+.nigate-image {
+  max-width: 600px;
+  margin: 10px auto 10px; /* 上下の余白はここで調整 */
+  text-align: center;
+}
+
+.nigate-image img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+  
 /* --------------- スライダー画像 --------------- */
 .slider-section {
          max-width: 760px;   /* スライターの背景の四角 */
@@ -578,8 +590,11 @@ footer {
   <img src="お子さまのお困りごとありませんか.png">
 </div>
 
+<div class="nigate-image">
+  <img src="苦手.png" alt="">
+</div>
+  
 <div class="slider-section">
-
   
   <button class="slide-arrow left">‹</button>
   
