--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@ header {
 }
 
 .nigate-image {
-  max-width: 600px;
-  margin: 1px auto 1px; /* 上下の余白はここで調整 */
+  max-width: 500px;
+  margin: 0 auto; /* 上下の余白はここで調整 */
   text-align: center;
 }
 
