--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ header {
 /* --------------- お困りごとありませんか --------------- */
 .overlay-image {
   max-width: 500px;
-  margin: 5px auto;
+  margin: 5px auto 0;
   text-align: center;
 }
 
