--- a/index.html
+++ b/index.html
@@ -257,12 +257,13 @@ header {
   scroll-snap-align: start;
   display: flex;
   justify-content: center;
+  overflow: hidden; 
 }
 
 .slide img {
   width: 100%;
-  height: auto;
-  display: block;
+  height: 100%;
+  object-fit: cover;
 }
 
 /* ---------- 丸 ---------- */
