--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ header {
       /* スライダー本体 */
 /* 1枚ずつ表示（PC） */
 .slider {
-  width: 420px;
+  width: 520px;
   overflow-x: auto;
   scroll-snap-type: x mandatory;
   display: flex;
@@ -249,7 +249,7 @@ header {
 /* スマホ */
 @media (max-width: 480px) {
   .slider {
-    width: 300px;
+    width: 350px;
   }
 }
   .slide {
@@ -258,6 +258,7 @@ header {
   display: flex;
   justify-content: center;
   overflow: hidden; 
+  border-radius: 16px;
 }
 
 .slide img {
