--- a/index.html
+++ b/index.html
@@ -523,6 +523,39 @@ header {
 }
 
 /* ------------------ お問い合わせ ------------------ */
+.contact-cta {
+  text-align: center;
+  margin: 50px 0 70px;
+}
+
+.contact-cta a {
+  display: inline-block;
+  padding: 14px 36px;
+  font-size: 1.1em;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
+  color: #9F987D;
+  background: rgba(255,255,255,0.85);
+  border: 2px solid #9F987D;
+  border-radius: 999px;   /* ← やさしい丸 */
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+
+.contact-cta a:hover {
+  background: #9F987D;
+  color: #fff;
+  transform: translateY(-2px);
+}
+
+/* スマホ */
+@media (max-width: 480px) {
+  .contact-cta a {
+    width: 80%;
+    padding: 14px 0;
+    font-size: 1.05em;
+  }
+}
+  
 .contact-form {
   display: none;
   max-width: 900px;
@@ -687,6 +720,10 @@ footer {
 
 <h2 class="pc-title contact-title" id="contact">お問い合わせ</h2>
 
+  <div class="contact-cta">
+  <a href="#" id="contact-cta-btn">お問い合わせはこちら</a>
+</div>
+
 <section id="contact-section" class="contact-form">
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSci9ClyPaBeHyqKnsIpgh6nGqeLRpV-x8E1sJ7C8qhSyth11Q/viewform?embedded=true" width="100%" height="700">
   </iframe>
@@ -802,7 +839,7 @@ function startAutoScroll() {
     currentIndex =
       currentIndex >= slides.length - 1 ? 0 : currentIndex + 1;
     goToSlide(currentIndex);
-  }, 5500);
+  }, 6500);
 }
 
 function stopAutoScroll() {
@@ -843,6 +880,7 @@ slider.addEventListener('touchend', startAutoScroll);
   ====================== */
   const contactLink = document.getElementById('contact-link');
   const contactForm = document.getElementById('contact-section');
+  const contactBtn = document.getElementById('contact-cta-btn');
 
   if (contactLink && contactForm) {
     contactLink.addEventListener('click', e => {
