--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ header {
 /* --------------- お困りごとありませんか --------------- */
 .overlay-image {
   max-width: 500px;
-  margin: 5px auto 0;
+  margin: 5px auto -10;
   text-align: center;
 }
 
@@ -157,7 +157,7 @@ header {
 
 .nigate-image {
   max-width: 500px;
-  margin: 0 auto; /* 上下の余白はここで調整 */
+  margin: -10 auto　-10px; /* 上下の余白はここで調整 */
   text-align: center;
 }
 
@@ -169,10 +169,10 @@ header {
   
 /* --------------- スライダー画像 --------------- */
 .slider-section {
-  width: fit-content;
+  max-width: 900px;
   margin: 0 auto;
-  background: rgba(255,255,255,0.9);
-  padding: 6px;
+  background: rgba(255,255,255,0.75);
+  padding: 25px;
   border-radius: 16px;
 
   position: relative;
@@ -561,7 +561,7 @@ header {
   max-width: 900px;
   margin: 0 auto 80px;
   padding: 0 20px;
-  background: rgba(255,255,255,0.85);
+  background: rgba(255,255,255,0.75);
   border-radius: 15px;
 }
   /* iframeは常に親にフィット */
