--- a/index.html
+++ b/index.html
@@ -241,6 +241,14 @@ header {
   scroll-snap-type: x mandatory;
   display: flex;
   margin: 0 auto;
+  background: linear-gradient(
+    to right,
+    rgba(255,255,255,0) 0%,
+    rgba(255,255,255,0.6) 15%,
+    rgba(255,255,255,0.6) 85%,
+    rgba(255,255,255,0) 100%
+  );
+  padding: 10px 0;
 }
 .slider::-webkit-scrollbar {
   display: none;
