--- a/index.html
+++ b/index.html
@@ -241,14 +241,7 @@ header {
   scroll-snap-type: x mandatory;
   display: flex;
   margin: 0 auto;
-  background: linear-gradient(
-    to right,
-    rgba(255,255,255,0) 0%,
-    rgba(255,255,255,0.6) 15%,
-    rgba(255,255,255,0.6) 85%,
-    rgba(255,255,255,0) 100%
-  );
-  padding: 10px 0;
+  dding: 10px 0;
 }
 .slider::-webkit-scrollbar {
   display: none;
@@ -299,6 +292,33 @@ header {
 
 .slider-dots button.active {
   background: #9F987D;
+}
+
+  .slider-wrapper {
+  position: relative;
+}
+
+/* 溶けるベール */
+.slider-wrapper::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  pointer-events: none;
+  z-index: 5;
+
+  background:
+    linear-gradient(to top,
+      rgba(255,255,255,0.9) 0%,
+      rgba(255,255,255,0) 25%),
+    linear-gradient(to bottom,
+      rgba(255,255,255,0.9) 0%,
+      rgba(255,255,255,0) 25%),
+    linear-gradient(to left,
+      rgba(255,255,255,0.9) 0%,
+      rgba(255,255,255,0) 25%),
+    linear-gradient(to right,
+      rgba(255,255,255,0.9) 0%,
+      rgba(255,255,255,0) 25%);
 }
   
 /* ------------------ トグル ------------------ */
